--- a/sp-config/user-service-dev.yml
+++ b/sp-config/user-service-dev.yml
@@ -16,3 +16,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:2001/eureka,http://127.0.0.1:2002/eureka
+      
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
